[FAQ] Fix lang icon mobile size

--- a/css/faq_mobile.css
+++ b/css/faq_mobile.css
@@ -13,3 +13,7 @@
 #back {
     float: none;
 }
+#lang_icon {
+    width: auto;
+    height: auto;
+}
